--- a/src/assets/gui.fxml
+++ b/src/assets/gui.fxml
@@ -5,9 +5,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rombus.evilbones.lmg.Main">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="588.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rombus.evilbones.lmg.Main">
    <children>
-      <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+      <TabPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
          <tabs>
             <Tab text="Server">
                <content>
@@ -162,9 +162,9 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="143.0" prefWidth="600.0">
                      <children>
-                        <VBox prefHeight="149.0" prefWidth="600.0">
+                        <VBox prefHeight="149.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <TextArea fx:id="cmdInput" prefHeight="82.0" prefWidth="590.0" />
+                              <TextArea fx:id="cmdInput" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
                                     <Button fx:id="sendCmdBtn" mnemonicParsing="false" text="Send" />
@@ -189,18 +189,12 @@
             </Tab>
          </tabs>
       </TabPane>
-      <VBox alignment="BOTTOM_LEFT">
-         <children>
-            <TextArea fx:id="outputText">
-               <VBox.margin>
-                  <Insets left="5.0" right="5.0" />
-               </VBox.margin></TextArea>
-         </children>
+      <TextArea fx:id="outputText" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="600.0" VBox.vgrow="ALWAYS">
          <VBox.margin>
-            <Insets top="2.0" />
+            <Insets left="5.0" right="5.0" />
          </VBox.margin>
-      </VBox>
-      <Button fx:id="cleanLogBtn" alignment="BASELINE_LEFT" mnemonicParsing="false" text="Clean log" VBox.vgrow="NEVER">
+      </TextArea>
+      <Button fx:id="cleanLogBtn" alignment="BASELINE_LEFT" mnemonicParsing="false" text="Clean log">
          <VBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </VBox.margin>
