--- a/src/assets/gui.fxml
+++ b/src/assets/gui.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -7,9 +8,9 @@
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rombus.evilbones.lmg.Main">
    <children>
-      <TabPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+      <TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
          <tabs>
-            <Tab text="Server">
+            <Tab closable="false" text="Server">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="66.0" prefWidth="600.0">
                      <children>
@@ -50,7 +51,7 @@
                   </AnchorPane>
                </content>
             </Tab>
-            <Tab text="Media">
+            <Tab closable="false" text="Media">
                <content>
                   <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
                      <children>
@@ -158,7 +159,7 @@
                   </AnchorPane>
                </content>
             </Tab>
-            <Tab text="Terminal">
+            <Tab closable="false" text="Terminal">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="143.0" prefWidth="600.0">
                      <children>
@@ -188,6 +189,9 @@
               </content>
             </Tab>
          </tabs>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
       </TabPane>
       <Button fx:id="cleanLogBtn" alignment="BASELINE_LEFT" mnemonicParsing="false" text="Clean log">
          <VBox.margin>
